--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^8.3.4",
     "axios": "^0.26.1",
+    "browser-image-compression": "^2.0.0",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.0.0",
